@startuml class_global_simple
' NOTE: this source stays the model of record for the global class diagram,
' but it is NOT what the report prints. The supervisor asked for Project in
' the middle with the other classes arranged around it, and for the empty
' operations compartment to stay visible. GraphViz will not lay out either,
' so the figure is generated by docs/figures/gen_class_global.py instead.
' Keep the two in step: relations here must match the ones drawn there.
title Global class diagram --- PMS

left to right direction

skinparam shadowing false
skinparam nodesep 45
skinparam ranksep 70
skinparam class {
  BackgroundColor       #FFFFFF
  BorderColor           #808080
  BorderThickness       1
  HeaderBackgroundColor #FFFFFF
  FontColor             #333333
  FontName              Helvetica
  FontSize              11
  FontStyle             plain
  AttributeFontColor    #333333
  AttributeFontName     Helvetica
  AttributeFontSize     10
}
skinparam ArrowColor      #333333
skinparam ArrowThickness  1
skinparam ArrowFontColor  #000000
skinparam ArrowFontStyle  plain
skinparam ArrowFontName   Helvetica
skinparam ArrowFontSize   10
skinparam TitleFontName   Helvetica
skinparam TitleFontSize   13
skinparam TitleFontColor  #333333
skinparam noteBorderColor     #AAAAAA
skinparam noteBackgroundColor #FAFAFA
skinparam noteFontName        Helvetica
skinparam noteFontSize        9
hide circle
hide empty methods

class User {
  - id : int
  - lastName : string
  - firstName : string
  - email : string
  - active : boolean
}

class Role {
  - id : int
  - name : string
  - description : string
}

class Permission {
  - id : int
  - code : string
  - module : string
}

class Resource {
  - id : int
  - dailyRate : decimal
  - tccRate : decimal
}

class Project {
  - id : int
  - code : string
  - client : string
  - status : string
  - initialBudget : decimal
  - currency : string
}

class TeamAssignment {
  - id : int
  - roleInTeam : string
  - startDate : date
  - endDate : date
}

class WorkloadPlan {
  - id : int
  - period : date
  - plannedDays : decimal
}

class ActualWorkload {
  - id : int
  - period : date
  - actualDays : decimal
  - validatedAt : date
}

class BillingMilestone {
  - id : int
  - label : string
  - percentage : decimal
  - amount : decimal
  - status : string
}

class Mission {
  - id : int
  - subject : string
  - startDate : date
  - endDate : date
}

class Sprint {
  - id : int
  - name : string
  - startDate : date
  - endDate : date
  - status : string
}

class BacklogItem {
  - id : int
  - title : string
  - priority : string
  - estimateDays : decimal
  - status : string
}

class Deliverable {
  - id : int
  - title : string
  - dueDate : date
  - status : string
}

class Risk {
  - id : int
  - description : string
  - probability : string
  - impact : string
}

class KpiSnapshot {
  - id : int
  - snapshotDate : date
  - eac : decimal
  - margin : decimal
}

User "1..*" -- "1" Role          : holds
Role        "1..*" -- "1..*" Permission : grants
Resource   "0..1" -- "1" User   : cost of

Project "1..*" -- "1" User    : directed by
Project "1..*" -- "0..1" User : managed by
TeamAssignment "1..*" -- "1" User : member

Project "1" -- "1..*" TeamAssignment : staffed by
Project "1" -- "1..*" WorkloadPlan : forecasts
Project "1" -- "1..*" ActualWorkload : consumes
Project "1" -- "1..*" BillingMilestone : invoiced by
Project "1" -- "1..*" Mission : incurs
Project "1" *-- "1..*" BacklogItem : owns
Project "1" -- "1..*" Deliverable : produces
Project "1" -- "1..*" Risk : tracks
Project "1" -- "1..*" KpiSnapshot : measured by

Sprint "0..1" o-- "1..*" BacklogItem : gathers

note bottom of Permission
  The four roles are rows in the database,
  not subclasses: the policy is data.
end note

@enduml
